src/css/your-order.css
img {
  display: block;
  min-width: 100%;
  height: auto;
}

button {
  cursor: pointer;
}

.your-order {
  background-color: #7a3145;
}
.your-order-container {
  padding-top: 80px;
  padding-bottom: 80px;
}

@media screen and (min-width: 768px) {
  .your-order-container {
    padding-top: 100px;
    padding-bottom: 100px;
  }
}

@media screen and (min-width: 1280px) {
  .your-order-container {
    padding: 100px;
  }
}

.your-order-title-box {
  display: inline;
  /* width: 640px; */
}
.your-order-title {
  font-size: 48px;
  font-weight: 600;
  line-height: 1.04;
  letter-spacing: -0.015em;
  text-transform: uppercase;
  margin-bottom: 30px;
}

@media screen and (min-width: 768px) {
  .your-order-title {
    font-size: 64px;
    line-height: 1;
    margin-bottom: 25px;
  }
}

@media screen and (min-width: 1280px) {
  .your-order-title {
    max-width: 751px;
  }
}

.your-order-title-span {
  color: rgba(251, 251, 251, 0.3);
}

.your-order-text {
  font-size: 14px;
  line-height: 1.29;
  margin-bottom: 40px;
}

@media screen and (min-width: 768px) {
  .your-order-text {
    font-size: 16px;
    line-height: 1.25;
    font-style: normal;
    margin-bottom: 50px;
    max-width: 640px;
  }
}

@media screen and (min-width: 1280px) {
  .your-order-text {
    max-width: 742px;
  }
}

.your-order-box {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

@media screen and (min-width: 1280px) {
  .your-order-box {
    flex-direction: row;
  }
}

.your-order-form-cont {
    background-color: #FBFBFB;
  border-radius: 30px;
  padding: 40px 20px;
}

@media screen and (min-width: 768px) {
  .your-order-form-cont {
    max-width: 628px;
    margin: 0 auto;
    padding: 50px 100px;
  }
}

@media screen and (min-width: 1280px) {
  .your-order-form-cont {
      max-width: 529px;
          padding: 50px;
  }
}
.your-order-form-title {
  color: #141414;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 1.08;
  letter-spacing: -0.015em;
  text-transform: uppercase;
  margin-bottom: 40px;
}

@media screen and (min-width: 768px) {
  .your-order-form-title {
      margin-bottom: 50px;
  }
}

.your-order-form-span-red {
  color: #7a3145;
}

.your-order-form-span-green {
  color: #576f35;
}

.form-container {

  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-bottom: 20px;
}

@media screen and (min-width: 1280px) {
  .form-container {
  margin-bottom: 25px;
}
}

.your-order-input {
  color: #141414;
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: -0.02em;
  border-radius: 30px;
  border: 1px solid rgba(20, 20, 20, 0.2);
  height: 46px;
  padding: 14px 16px;
}


@media screen and (min-width: 768px) {
  .your-order-input {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.25;
    height: 52px;
  }
}
.your-order-input:valid {
  border: 1px solid #3CBC81;}

.your-order-input:invalid {
  border: 1px solid #E74A3B; }


.your-order-textarea {
  width: 100%;
  height: 91px;
  color: #141414;
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: -0.02em;
  border-radius: 15px;
  border: 1px solid rgba(20, 20, 20, 0.2);
  padding: 14px 16px;
  outline: transparent;
  background-color: transparent;
  resize: none;
}

@media screen and (min-width: 768px) {
  .your-order-textarea {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.25;
    height: 95px;
  }
}

.your-order-button {
  border-radius: 30px;
color: #FBFBFB;
  background: #576f35;
  padding: 16px 129px;
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: -0.015em;
  text-transform: uppercase;
  border: none;
}

@media screen and (min-width: 768px) {
  .your-order-button {
    padding: 16px 191px;
    font-size: 18px;
    line-height: 1.11;
    letter-spacing: -0.015em;
  }
}
.your-order-img-cont {
  background-color: #fff;
  border-radius: 30px;
  background: #576f35;
  padding: 40px 20px;
  /* width: 335px; */
}

@media screen and (min-width: 768px) {
  .your-order-img-cont {
    max-width: 628px;
    margin: 0 auto;
    padding: 50px;
  }
}
.your-order-img {
  border-radius: 15px;
  background: linear-gradient(
      0deg,
      rgba(20, 20, 20, 0.3) 0%,
      rgba(20, 20, 20, 0.3) 100%
    ),
    url(<path-to-image>) lightgray -36.221px -42.887px / 167.158% 122.975%
      no-repeat;
  margin-bottom: 20px;
  border: none;
}

@media screen and (min-width: 768px) {
  .your-order-img {
    margin-bottom: 50px;
  }
}

.your-order-img-text {
  color: rgba(251, 251, 251, 0.5);
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 1.29;
  letter-spacing: -0.015em;
  margin-bottom: 14px;
}

@media screen and (min-width: 768px) {
  .your-order-img-text {
    font-size: 18px;
    line-height: 1.11;
    letter-spacing: -0.015em;
    margin-bottom: 15px;
  }
}

.your-order-list {
  display: flex;
  gap: 8px;
  flex-wrap: wrap;
}

@media screen and (min-width: 768px) {
  .your-order-list {
    gap: 12px;
  }
}

.your-order-link {
  font-size: 24px;
  font-weight: 600;
  line-height: 1.08;
  letter-spacing: -0.015em;
}
@media screen and (min-width: 768px) {
  .your-order-link {
    font-size: 32px;
    line-height: 1;
    letter-spacing: -0.015em;
  }
}

